--- a/front_end/static/index.css
+++ b/front_end/static/index.css
@@ -16,3 +16,17 @@
     max-height: 33vh;
     overflow-y: auto;
 } */
+
+.loader {
+border: 5px solid #d7d7d7; 
+border-top: 5px solid #777;
+border-radius: 50%;
+width: 30px;
+height: 30px;
+animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
