--- a/front_end/templates/base.html
+++ b/front_end/templates/base.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='/index.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='/index.js') }}"></script>
    
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+   
     {% block include %}{% endblock %}
 </head>
 <body>
