--- a/front_end/templates/index.html
+++ b/front_end/templates/index.html
@@ -42,12 +42,38 @@
         padding: 1rem;
         border-radius: 0.25rem;
         overflow-x: auto;
+        margin: 0;
     }
     .markdown-content code {
         background-color: #f8f9fa;
         padding: 0.2rem 0.4rem;
         border-radius: 0.25rem;
         font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+        display: block;
+        overflow-x: auto;
+    }
+
+    /* Code line numbers styles */
+    .code-block {
+        position: relative;
+        padding-left: 3.5rem !important;
+        margin: 0;
+        overflow-y: hidden;
+    }
+    .line-numbers {
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        width: 3rem;
+        padding: 1rem 0.5rem;
+        background-color: #f1f1f1;
+        border-right: 1px solid #ddd;
+        color: #666;
+        font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+        user-select: none;
+        text-align: right;
+        padding-top: 0px;
     }
 
     /* Context Menu Styles */
@@ -63,7 +89,36 @@
     #notebook-viewer {
         user-select: text;
     }
+    #notebook-viewer pre {
+        margin: 0;
+        border-radius: 0;
+    }
+    #notebook-viewer .code-block {
+        border-radius: 0.25rem;
+        margin-bottom: 1rem;
+    }
+    #notebook-viewer .code-block:last-child {
+        margin-bottom: 0;
+    }
 </style>
+
+<!-- Context Modal -->
+<div class="modal fade" id="contextModal" tabindex="-1" aria-labelledby="contextModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="contextModalLabel">Add Context</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <textarea id="contextText" class="form-control" rows="10" style="resize: vertical;"></textarea>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="d-flex flex-column justify-content-center align-items-center px-4">
 
